--- a/src/css/pages/footer.css
+++ b/src/css/pages/footer.css
@@ -2,7 +2,7 @@
 #footer {
   position: relative;
   overflow: hidden;
-  height: 50vh;
+  height: 100vh;
   background: linear-gradient(to bottom, #4385AF, #024A7B, #003058);
   border: 1px solid #f00;
 }
@@ -37,24 +37,56 @@
     opacity: 0;
   }
 }
-#footer .wsplide .splide__track {
-  border: 1px solid #000;
+.slide-container{
+  position: relative;
+  height: 100vh;
+ display: flex;
+
+ align-items: center;
+ justify-content: center;
+
+ 
 }
-#footer .wsplide .splide__track .splide__list {
-  display: flex;
+ul.flow_list{width: 100%; }
+
+.splide {
+  width: 100%;
+  padding: 2vw;
 }
-#footer .wsplide .splide__track .splide__list img {
-  width: 4vw;
-}
-#footer .wsplide .splide__track .splide__list .splide__slide {
-  color: #fff;
-  padding: 10px;
-  font-size: 2vw;
+
+.splide .splide__track ul li {
   display: flex;
   align-items: center;
-  flex-shrink: 0;
-  padding: 10px 20px;
+  justify-content: center;
+  font-size: 5vw;
+  text-transform: uppercase;
+  font-weight: 800;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-#footer .wsplide .splide__track .splide__list .splide__slide.is-active {
-  color: rgb(255, 196, 0);
+
+.splide.ltl li img {
+  width: 5vw;
+  height: 5vw;
 }
+
+.splide .splide__track-1 ul li {
+
+  -webkit-text-stroke: 2px black;
+  color: transparent;
+}
+
+.splide .splide__track-2 {
+transform: rotate(2deg);
+
+}
+
+.splide.rtl ul li img {
+  height: 20vw;
+}
+
+.splide .splide__track-3 {
+  background: var(--subBg500);
+  transform: rotate(-2deg);
+
+}
+
